[gd_scene load_steps=4 format=3 uid="uid://djvmlxxg6gobi"]

[ext_resource type="PackedScene" uid="uid://m23lnphxjku1" path="res://dev_tabs/notes/note_types/note_template.tscn" id="1_otumc"]
[ext_resource type="Script" path="res://dev_tabs/notes/note_types/note_label.gd" id="2_dxdlx"]

[sub_resource type="LabelSettings" id="LabelSettings_el6bu"]

[node name="label" instance=ExtResource("1_otumc")]

[node name="container" parent="." index="0"]
mouse_filter = 2

[node name="note_bg" parent="container" index="0"]
mouse_filter = 2

[node name="VBoxContainer" parent="container" index="1"]
mouse_filter = 2

[node name="title" parent="container/VBoxContainer/note_bar/note_bar" index="0"]
label_settings = SubResource("LabelSettings_el6bu")

[node name="note_content" parent="container/VBoxContainer" index="1"]
mouse_filter = 2
script = ExtResource("2_dxdlx")

[node name="naming" type="Node2D" parent="container/VBoxContainer/note_content" index="0"]
visible = false
position = Vector2(86, -52)

[node name="bg" type="ColorRect" parent="container/VBoxContainer/note_content/naming" index="0"]
offset_right = 133.0
offset_bottom = 49.0
color = Color(0.197937, 0.197937, 0.197937, 1)

[node name="name_text" type="TextEdit" parent="container/VBoxContainer/note_content/naming" index="1"]
offset_left = 5.0
offset_top = 6.0
offset_right = 123.0
offset_bottom = 43.0

[connection signal="mouse_entered" from="container/VBoxContainer/note_bar" to="." method="_on_note_bar_mouse_entered"]
[connection signal="mouse_exited" from="container/VBoxContainer/note_bar" to="." method="_on_note_bar_mouse_exited"]
[connection signal="mouse_entered" from="container/VBoxContainer/note_bar/note_bar" to="." method="_on_note_bar_mouse_entered"]
[connection signal="mouse_exited" from="container/VBoxContainer/note_bar/note_bar" to="." method="_on_note_bar_mouse_exited"]
[connection signal="mouse_entered" from="container/VBoxContainer/note_bar/note_bar/ColorPickerButton" to="." method="_on_color_picker_button_mouse_entered"]
[connection signal="mouse_exited" from="container/VBoxContainer/note_bar/note_bar/ColorPickerButton" to="." method="_on_color_picker_button_mouse_exited"]
[connection signal="popup_closed" from="container/VBoxContainer/note_bar/note_bar/ColorPickerButton" to="." method="_on_color_picker_button_popup_closed"]
[connection signal="pressed" from="container/VBoxContainer/note_bar/note_bar/ColorPickerButton" to="." method="_on_color_picker_button_pressed"]
[connection signal="mouse_entered" from="container/VBoxContainer/note_bar/note_bar/rename" to="." method="_on_rename_mouse_entered"]
[connection signal="mouse_exited" from="container/VBoxContainer/note_bar/note_bar/rename" to="." method="_on_rename_mouse_exited"]
[connection signal="mouse_entered" from="container/VBoxContainer/note_bar/note_bar/close" to="." method="_on_close_mouse_entered"]
[connection signal="mouse_exited" from="container/VBoxContainer/note_bar/note_bar/close" to="." method="_on_close_mouse_exited"]
[connection signal="gui_input" from="container/VBoxContainer/note_content/naming/name_text" to="container/VBoxContainer/note_content" method="_on_name_text_gui_input"]
